# macro-kbd

./: .pre-commit-config.yaml  example-config.toml  macros.py  macros.toml  pyproject.toml
macro_kbd/: main.py
