[tool.poetry]
name = "macro-kbd"
version = "20.1.0"
description = "TOML configurable keyboard macros in linux"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"
evdev = "^1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
macro-kbd = 'macro_kbd.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
